--- a/Views/Desaparecido/ListMeusDesaparecidos.cshtml
+++ b/Views/Desaparecido/ListMeusDesaparecidos.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Meus Desaparecidos";
+    ViewBag.Foto = "";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/Content/Listagem.css" rel="stylesheet" />
@@ -17,28 +18,55 @@
     {
         if (item.Ativo)
         {
-            <div class="card-desaparecido">
+    <div class="card-desaparecido">
+        @{
+            if (ViewBag.FotosPerfil == null)
+            {
                 <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
-                <p class="list-name">@Html.DisplayFor(model => item.Pessoa.Nome)</p>
-                <p class="list-age">
-                    @{
-                        DateTime dataInicial = item.Pessoa.DataNascimento;
-                        DateTime dataFinal = DateTime.Now;
-                        int ano = dataFinal.Year;
-                        int anoInicial = dataInicial.Year;
-                        int idade = ano - anoInicial;
-                        string show = idade + " Anos";
-
-                        @Html.DisplayFor(model => show)
-
+            }
+            else
+            {
+                ViewBag.Foto = "";
+                foreach (var img in ViewBag.FotosPerfil)
+                {
+                    if (img.PessoaId == item.PessoaId)
+                    {
+                        ViewBag.Foto = img.Foto;
                     }
-                </p>
+                }
+            }
+        }
+        @{
+            if (ViewBag.Foto != "")
+            {
+                <img src="~/Uploads/@ViewBag.Foto" alt="temp" class="img-perfil" style="border-radius: 50%" />
+            }
+            else
+            {
+                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil"  style="border-radius: 50%"/>
 
-                <p class="list-subtitle">Desaparecido desde:</p>
-                <p class="list-date">@Html.DisplayFor(model => item.Cadastro.ToString().Split(' ')[0])</p>
+            }
+        }
+        <p class="list-name">@Html.DisplayFor(model => item.Pessoa.Nome)</p>
+        <p class="list-age">
+            @{
+                DateTime dataInicial = item.Pessoa.DataNascimento;
+                DateTime dataFinal = DateTime.Now;
+                int ano = dataFinal.Year;
+                int anoInicial = dataInicial.Year;
+                int idade = ano - anoInicial;
+                string show = idade + " Anos";
 
-                <a href="https://localhost:44390/Desaparecido/ListOneDesaparecido/@item.Id" class="list-button">Mais Informações</a>
-            </div>
+                @Html.DisplayFor(model => show)
+
+            }
+        </p>
+
+        <p class="list-subtitle">Desaparecido desde:</p>
+        <p class="list-date">@Html.DisplayFor(model => item.Cadastro.ToString().Split(' ')[0])</p>
+
+        <a href="https://localhost:44390/Desaparecido/ListOneDesaparecido/@item.Id" class="list-button">Mais Informações</a>
+    </div>
         }
 
     }
