--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -170,52 +170,52 @@
             @{
                 foreach (var hist in ViewBag.Historico)
                 {
-                <div class="two-line-exibition">
-                    <div class="list-item">
-                        <p class="body-title">Local</p>
-                        <p>@hist.UltimoLugarVisto</p>
+                    <div class="two-line-exibition">
+                        <div class="list-item">
+                            <p class="body-title">Local</p>
+                            <p>@hist.UltimoLugarVisto</p>
+                        </div>
+                        <div class="list-item">
+                            <p class="body-title">Cidade</p>
+                            <p>@hist.UltimaLocalizacao</p>
+                        </div>
                     </div>
-                    <div class="list-item">
-                        <p class="body-title">Cidade</p>
-                        <p>@hist.UltimaLocalizacao</p>
+                    <div class="two-line-exibition">
+                        <div class="list-item">
+                            <p class="body-title">Ultima Roupa</p>
+                            <p>@hist.UltimaRoupa</p>
+                        </div>
+                        <div class="list-item">
+                            <p class="body-title">Data</p>
+                            <p>@hist.UltimoHorarioVisto.ToString().Split(' ')[0]</p>
+                        </div>
                     </div>
-                </div>
-                <div class="two-line-exibition">
-                    <div class="list-item">
-                        <p class="body-title">Ultima Roupa</p>
-                        <p>@hist.UltimaRoupa</p>
+                    <div class="two-line-exibition">
+                        <div class="list-item">
+                            <p class="body-title">Mais informações</p>
+                            <p>@hist.MaisInformacoes</p>
+                        </div>
                     </div>
-                    <div class="list-item">
-                        <p class="body-title">Data</p>
-                        <p>@hist.UltimoHorarioVisto.ToString().Split(' ')[0]</p>
-                    </div>
-                </div>
-                <div class="two-line-exibition">
-                    <div class="list-item">
-                        <p class="body-title">Mais informações</p>
-                        <p>@hist.MaisInformacoes</p>
-                    </div>
-                </div>
                     if (ViewBag.isResponsavel)
                     {
-                <div class="two-line-exibition">
-                    <div class="list-item">
-                        <p class="body-title">Quem viu?</p>
-                        <p>@hist.NomeQuemViu</p>
-                    </div>
-                </div>
-                <div class="two-line-exibition">
-                    <div class="list-item">
-                        <p class="body-title">Contato</p>
-                        <p>@hist.ContatoQuemViu</p>
-                    </div>
-                    <div class="list-item">
-                        <p class="body-title">Email</p>
-                        <p>@hist.EmailQuemViu</p>
-                    </div>
-                </div>
+                        <div class="two-line-exibition">
+                            <div class="list-item">
+                                <p class="body-title">Quem viu?</p>
+                                <p>@hist.NomeQuemViu</p>
+                            </div>
+                        </div>
+                        <div class="two-line-exibition">
+                            <div class="list-item">
+                                <p class="body-title">Contato</p>
+                                <p>@hist.ContatoQuemViu</p>
+                            </div>
+                            <div class="list-item">
+                                <p class="body-title">Email</p>
+                                <p>@hist.EmailQuemViu</p>
+                            </div>
+                        </div>
                     }
-                <hr />
+                    <hr />
                 }
             }
         </div>
@@ -228,9 +228,9 @@
             {
                 <div>
                     <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
-                    <a href="~/Desaparecido/ViEstaPessoa/@Model.Id" class="btn btn-lg btn-primary">Pessoa Encontrada</a>
+                    <button data-toggle="modal" data-target="#pessoaEncontrada" class="btn btn-lg btn-primary">Pessoa Encontrada</button>
                 </div>
-                <a href="~/Denuncias/Create/@ViewBag.DesaparecidoId" class="card-denuncia">Apagar desaparecido</a>
+                <a class="card-denuncia" data-toggle="modal" data-target="#confirmarExcluir" style="cursor: pointer;">Apagar Desaparecido</a>
             }
             else
             {
@@ -241,5 +241,45 @@
                 <a href="~/Denuncias/Create/@ViewBag.DesaparecidoId" class="card-denuncia">Denunciar este perfil</a>
             }
         }
+    </div>
+</div>
+
+<!-- Modal Apagar desaparecido -->
+<div class="modal fade" id="confirmarExcluir" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Deseja mesmo excluir este desaparecido?</h4>
+            </div>
+            <div class="modal-body">
+                <p>Caso clique em sim o desaparecido será excluido e não poderá ser visto novamente no nosso sistema</p>
+                <div class="alert alert-warning" role="alert"><strong>Aviso!</strong> Caso o desaparecido foi encontrado favor clicar em Pessoa encontrada</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger">Confirmar exclusão</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal Pessoa Encontrada -->
+<div class="modal fade" id="pessoaEncontrada" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">A pessoa foi encontrada?</h4>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-warning" role="alert"><strong>Aviso!</strong> Ao clicar em sim o desaparecido será removido da listagem de desaparecidos</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Não</button>
+                <a href="~/Desaparecido/DesaparecidoEncontrado/@Model.Id" class="btn btn-primary">Sim</a>
+            </div>
+        </div>
     </div>
 </div>
