Validação na listagem de desaparecidos para nao exibir desaparecidos excluidos

--- a/Views/Desaparecido/ListDesaparecidoTest.cshtml
+++ b/Views/Desaparecido/ListDesaparecidoTest.cshtml
@@ -16,7 +16,7 @@
 <div class="peoples-desaparecidas">
     @foreach (var item in Model)
     {
-        if (item.Ativo)
+        if (item.Ativo && !item.IsDeleted)
         {
             <div class="card-desaparecido">
                 @{
