--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -258,7 +258,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-danger">Confirmar exclusão</button>
+                <a href="~/Desaparecido/ExcluirDesaparecido/@Model.Id" class="btn btn-danger">Confirmar exclusão</a>
             </div>
         </div>
     </div>
