--- a/Views/Vulneravels/ListOneVulneravel.cshtml
+++ b/Views/Vulneravels/ListOneVulneravel.cshtml
@@ -165,7 +165,26 @@
     <div class="card-footer">
         <div>
             <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
-            <input type="button" value="Desapareceu" class="btn btn-lg btn-danger">
+            <button data-toggle="modal" data-target="#confirmarDesaparecimento" class="btn btn-lg btn-danger">Desapareceu</button>
+        </div>
+    </div>
+</div>
+
+<!-- Modal confirmar desaparecimento -->
+<div class="modal fade" id="confirmarDesaparecimento" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Este vulnerável realmente desapareceu?</h4>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-warning" role="alert"><strong>Aviso!</strong> Caso clique em sim o o vulnerável será exibido para todos os usuários no sistema</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <a href="~/Vulneravels/DesaparecimentoVulneravel/@Model.Id" class="btn btn-primary">Confirmar desaparecimento</a>
+            </div>
         </div>
     </div>
 </div>
