Validação de documentos do vulneravel quando ele desaparece

--- a/Views/Desaparecido/ConfirmationRegisterDesaparecido.cshtml
+++ b/Views/Desaparecido/ConfirmationRegisterDesaparecido.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
     <h1 class="title">Estamos quase acabando...</h1>
-    <p class="subtitle">Informe o boletim de ocorrência feito em uma delegacia mais próxima para evitar situações indesejadas.</p>
+    <p class="subtitle">Informe o boletim de ocorrência do desaparecimento para evitar situações indesejadas</p>
     <div class="form-horizontal">
 
         <div class="form-group form-Box2">
