--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -230,7 +230,12 @@
                     <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
                     <button data-toggle="modal" data-target="#pessoaEncontrada" class="btn btn-lg btn-primary">Pessoa Encontrada</button>
                 </div>
-                <a class="card-denuncia" data-toggle="modal" data-target="#confirmarExcluir" style="cursor: pointer;">Apagar Desaparecido</a>
+
+                if (!Model.IsVulneravel)
+                {
+                    <a class="card-denuncia" data-toggle="modal" data-target="#confirmarExcluir" style="cursor: pointer;">Apagar Desaparecido</a>
+                }
+
             }
             else
             {
