Numero de pessoas encontradas na home

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -98,6 +98,12 @@
 
         </p>
     </div>
+    <div class="aboutContainer">
+        <img src="~/Images/banner 3.jpg" alt="notImage" class="img-not-found" />
+        <p class="text-not-found">
+            Pessoas Encontradas <strong>@ViewBag.PessoasEncontradas</strong>
+        </p>
+    </div>
 </div>
 
 
